Import of WWOLF/App-Nopaste-Service-Dancebin-0.002 from CPAN.
gitpan-cpan-distribution: App-Nopaste-Service-Dancebin
gitpan-cpan-version:      0.002
gitpan-cpan-path:         WWOLF/App-Nopaste-Service-Dancebin-0.002.tar.gz
gitpan-cpan-author:       WWOLF
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -23,5 +23,6 @@ requires:
   warnings: 0
 resources:
   bugtracker: https://github.com/throughnothing/App-Nopaste-Service-Dancebin/issues
+  homepage: http://metacpan.org/release/App-Nopaste-Service-Dancebin/
   repository: git://github.com/throughnothing/App-Nopaste-Service-Dancebin.git
-version: 0.001
+version: 0.002
